[package]
name = "deno-bcrypt"
version = "2.1.0"
authors = ["Felix <webmaster@schindlerfelix.de>"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
bcrypt = "0.19.2"
deno_bindgen = "0.8.1"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
